assets/css/styles.css
/* ... */
.side-navbar .list-group .list-group-item {
  transition: width 0.3s;
  margin: 0.5rem 0px;
  display: flex;
  align-items: center;
  padding: 1.5rem 0rem 1.5rem 1.8rem;
  width: 95%;
  height: 100%;
}
/* .side-navbar .list-group .list-group-item:hover {
  background-color: #fdcd0b;
  color: #000;
  border: none;
  font-weight: bold;
  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
  z-index: 1;
  width: 100%;
} */
.side-navbar .list-group {
  display: flex;
  flex-direction: column;
}
.side-navbar .list-group .list-group-item.active,
.side-navbar .list-group .list-group-item:hover {
  background-color: #fdcd0b;
  color: #000;
  border: none;
  z-index: 1;
  width: 100%;
  /* height: 95%; */
}
.side-navbar .list-group .list-group-item.active {
  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
  font-weight: bold;
}
.order-invoice-wrapper {
  order: unset;
}
@media (max-width: 992px) {
  .order-invoice-wrapper {
    order: -1;
  }
}
@media (max-width: 992px) {
  .side-navbar .list-group {
    display: flex;
    flex-direction: row;
  }
  .side-navbar .list-group .list-group-item {
    margin-right: 1rem;
    padding: 1.5rem 1rem;
  }
}
/* .side-navbar .list-group .list-group-item:hover:before {
  content: "";
  position: absolute;
  width: 100%;
  background-color: #fdcd0b;
  height: 100%;
  top: 5%;
  left: 5%;
  z-index: -1;
}
.side-navbar .list-group .list-group-item.active::before {
  content: "";
  position: absolute;
  width: 100%;
  height: 100%;
  background-color: #fdcd0b;
  top: 5%;
  left: 5%;
  z-index: -1;
} */

.recent-odrder-list {
  height: 500px;
  /* overflow-y: auto; */
  overflow-y: scroll;
}
.recent-odrder-list::-webkit-scrollbar {
  width: 0 !important;
}

.custom-file-label::after {
  background: #fdcd0b;
  border-color: #fdcd0b;
}

.order-card {
  border-width: 2px;
}
.order-card:hover {
  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
}
.multi-steper .nav,
.multi-steper-status .nav {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
}
.card-hover {
  text-decoration: none;
}
.card-hover:hover {
  text-decoration: none;
  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
}
.multi-steper .nav:before,
.multi-steper-status .nav:before {
  content: "";
  position: absolute;
  border-top: 1px #e2e2e2 solid;
  bottom: 50%;
  left: 7%;
  width: 85%;
  z-index: 0;
}
.multi-steper .nav .nav-item,
.multi-steper-status .nav .nav-item {
  z-index: 1;
  margin: 0.5rem;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
}
.multi-steper .nav .nav-item a,
.multi-steper-status .nav .nav-item a {
  color: #000;
  background: #fff;
  border: 1px #eee solid;
  /* min-width: 100px; */
  /* border-radius: 500px; */
}
.multi-steper .nav .nav-item .active,
.multi-steper-status .nav .nav-item .active {
  background: #fdcd0b;
}

.updates-wrapper {
  display: flex;
  flex-direction: column;
}

.updates-wrapper .pudates-me,
.updates-wrapper .pudates-other {
  width: 80%;
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
  border: 1px solid black;
  border-radius: 2rem;
  padding: 1rem;
}
.updates-wrapper .pudates-me {
  align-self: flex-end;
  border: 1px solid #fdcd0b;
}
.updates-wrapper .add-update-wrapper {
}

@media (max-width: 992px) {
  /* .multi-steper-status .nav:before {
    content: none;
    border-top: none;
  } */
  .multi-steper-status .nav-link:not(.active) {
    display: none;
  }
}

.custom-file-label.rounded-pill::after {
  padding-right: 0.6em;
  padding-left: 0.6em;
  border-radius: 10rem;
}

.bids-options-wrapper .nav .nav-link {
  /* background-color: #fdcd0b; */
  color: #495057;
  
}
.bids-options-wrapper .nav .nav-link.active {
  background-color: #fdcd0b;
  color: #000;
  font-weight: bold;
  border-color: #fdcd0b;
  border-radius: 0px;
}

